# crossplane-argocd-gcp-drone-attack-services

./: .gitignore  README.md
apps/drone-colony-dstar-gcp-gke/: Cargo.toml  Dockerfile  Makefile  docker-compose.yaml  spec-README.md
apps/drone-colony-dstar-gcp-gke/deploy/: Chart.yaml  values.yaml
apps/drone-colony-dstar-gcp-gke/deploy/templates/: app.yaml
apps/drone-colony-dstar-gcp-gke/src/: app.rs  main.rs
apps/drone-colony-dstar-gcp-gke/src/data_storage/: api.rs  mod.rs  schema.rs  spanner_client.rs  spanner_schema.sql
apps/drone-colony-dstar-gcp-gke/src/drones/: attack_sortie.rs  engage_convoy.rs  mod.rs
apps/drone-colony-dstar-gcp-gke/src/pathfinding/: dstar.rs  mod.rs
crossplane-azure-control-plane/: Chart.yaml  values-azure-nonprod.yaml
crossplane-control-plane-cluster/: crossplane-config-single-shot.sh  crossplane-control-plane-kind-cluster-config.yaml  crossplane-control-plane-kind-cluster-gcp-creds.sh  crossplane-control-plane-kind-cluster-gcp-identity-delete-check.sh  crossplane-control-plane-kind-cluster-gcp-identity-drop.sh  crossplane-control-plane-kind-cluster-gcp-identity.sh  gke-cluster.yaml
crossplane-gcp-control-plane/: Chart.yaml  values-gcp-nonprod.yaml  values.yaml
crossplane-gcp-control-plane-provider/: Chart.yaml  values.yaml
crossplane-gcp-control-plane-provider-config/: Chart.yaml  values.yaml
crossplane-pkg/crossplane-pkg-request-cli/: Cargo.toml
crossplane-pkg/crossplane-pkg-request-cli/src/: crossplane.rs  git.rs  main.rs
crossplane-pkg/crossplane-pkg-request-cli/src/templates/: gcp_claim_template.yaml
(+150 files in other folders)
