[package]
name = "drone-colony-dstar-gcp-gke"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
google-cloud-spanner = "0.11"
rand = "0.8"
pathfinding = "4.1"

[workspace]
members = ["src/pathfinding", "src/drones", "src/data_storage"]
